# psychic-waffle

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  test.py
psychic/: __init__.py  __main__.py  dataset.py  main.py  model.py  pipeline.py
