[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psychic-waffle"
version = "0.1.0"
description = "Project for speech emotion recognition"
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
  "black",
  "flake8",
  "librosa",
  "pip-tools",
  "torch",
  "torchvision",
]

[project.scripts]
psy = "psychic.__main__:main"

[tool.setuptools.packages.find]
include = ["psychic*"]

[tool.black]
line-length = 79

